--- a/views/components/index.ejs
+++ b/views/components/index.ejs
@@ -27,7 +27,9 @@
                 </div>
             </div>
         </section>
+        <%- include('../layouts/search')%>
         <section class="regions">
+
             <div class="northern space">
                 <div class="region__heading">
                     <h3 class="region__name">Miền Bắc</h3>
@@ -42,10 +44,22 @@
                                     <img src="https://media-e1.s3.amazonaws.com/brt/styles/large/s3/snippets/snip_6.png" alt="">
                                 </div>
                                 <div class="info">
-                                    <div class="infor-item"></div>
-                                    <div class="infor-item"></div>
-                                    <div class="infor-item"></div>
-                                    <div class="infor-item"></div>
+                                    <div class="infor-header">Tên khu nghỉ dưỡng</div>
+                                    <div class="infor-beach">Tên Bãi biển </div>
+                                    <div class="infor-font">
+                                        <i class="infor-icon fa-solid fa-house">
+                                            <span>0M</span>
+                                        </i>   
+                                         <i class="infor-icon fa-solid fa-bed">
+                                            <span>0</span>
+                                         </i>
+                                         <i class="infor-icon fa-solid fa-bath">
+                                            <span>0</span>
+                                         </i>
+                                    </div>
+                                    <div class="infor-address">
+                                        <i class="fa-solid fa-location-dot"></i>
+                                        Quận - Phường - Thành Phố</div>
                                     <a href="" class="apartment-detail">Xem chi tiết</a>
                                 </div>
                             </div>
@@ -56,10 +70,22 @@
                                     <img src="https://media-e1.s3.amazonaws.com/brt/styles/large/s3/snippets/snip_6.png" alt="">
                                 </div>
                                 <div class="info">
-                                    <div class="infor-item"></div>
-                                    <div class="infor-item"></div>
-                                    <div class="infor-item"></div>
-                                    <div class="infor-item"></div>
+                                    <div class="infor-header">Tên khu nghỉ dưỡng</div>
+                                    <div class="infor-beach">Tên Bãi biển </div>
+                                    <div class="infor-font">
+                                        <i class="infor-icon fa-solid fa-house">
+                                            <span>0M</span>
+                                        </i>   
+                                         <i class="infor-icon fa-solid fa-bed">
+                                            <span>0</span>
+                                         </i>
+                                         <i class="infor-icon fa-solid fa-bath">
+                                            <span>0</span>
+                                         </i>
+                                    </div>
+                                    <div class="infor-address">
+                                        <i class="fa-solid fa-location-dot"></i>
+                                        Quận - Phường - Thành Phố</div>
                                     <a href="" class="apartment-detail">Xem chi tiết</a>
                                 </div>
                             </div>
@@ -70,38 +96,22 @@
                                     <img src="https://media-e1.s3.amazonaws.com/brt/styles/large/s3/snippets/snip_6.png" alt="">
                                 </div>
                                 <div class="info">
-                                    <div class="infor-item"></div>
-                                    <div class="infor-item"></div>
-                                    <div class="infor-item"></div>
-                                    <div class="infor-item"></div>
-                                    <a href="" class="apartment-detail">Xem chi tiết</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col l-3">
-                            <div class="apartment-item">
-                                <div class="apartment-image">
-                                    <img src="https://media-e1.s3.amazonaws.com/brt/styles/large/s3/snippets/snip_6.png" alt="">
-                                </div>
-                                <div class="info">
-                                    <div class="infor-item"></div>
-                                    <div class="infor-item"></div>
-                                    <div class="infor-item"></div>
-                                    <div class="infor-item"></div>
-                                    <a href="" class="apartment-detail">Xem chi tiết</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col l-3">
-                            <div class="apartment-item">
-                                <div class="apartment-image">
-                                    <img src="https://media-e1.s3.amazonaws.com/brt/styles/large/s3/snippets/snip_6.png" alt="">
-                                </div>
-                                <div class="info">
-                                    <div class="infor-item"></div>
-                                    <div class="infor-item"></div>
-                                    <div class="infor-item"></div>
-                                    <div class="infor-item"></div>
+                                    <div class="infor-header">Tên khu nghỉ dưỡng</div>
+                                    <div class="infor-beach">Tên Bãi biển </div>
+                                    <div class="infor-font">
+                                        <i class="infor-icon fa-solid fa-house">
+                                            <span>0M</span>
+                                        </i>   
+                                         <i class="infor-icon fa-solid fa-bed">
+                                            <span>0</span>
+                                         </i>
+                                         <i class="infor-icon fa-solid fa-bath">
+                                            <span>0</span>
+                                         </i>
+                                    </div>
+                                    <div class="infor-address">
+                                        <i class="fa-solid fa-location-dot"></i>
+                                        Quận - Phường - Thành Phố</div>
                                     <a href="" class="apartment-detail">Xem chi tiết</a>
                                 </div>
                             </div>
@@ -122,8 +132,50 @@
                                 <div class="apartment-image">
                                     <img src="https://media-e1.s3.amazonaws.com/brt/styles/large/s3/snippets/snip_6.png" alt="">
                                 </div>
-                                <div class="information">
-                                    <div class="infor-item"></div>
+                                <div class="info">
+                                    <div class="infor-header">Tên khu nghỉ dưỡng</div>
+                                    <div class="infor-beach">Tên Bãi biển </div>
+                                    <div class="infor-font">
+                                        <i class="infor-icon fa-solid fa-house">
+                                            <span>0M</span>
+                                        </i>   
+                                         <i class="infor-icon fa-solid fa-bed">
+                                            <span>0</span>
+                                         </i>
+                                         <i class="infor-icon fa-solid fa-bath">
+                                            <span>0</span>
+                                         </i>
+                                    </div>
+                                    <div class="infor-address">
+                                        <i class="fa-solid fa-location-dot"></i>
+                                        Quận - Phường - Thành Phố</div>
+                                    <a href="" class="apartment-detail">Xem chi tiết</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col l-3">
+                            <div class="apartment-item">
+                                <div class="apartment-image">
+                                    <img src="https://media-e1.s3.amazonaws.com/brt/styles/large/s3/snippets/snip_6.png" alt="">
+                                </div>
+                                <div class="info">
+                                    <div class="infor-header">Tên khu nghỉ dưỡng</div>
+                                    <div class="infor-beach">Tên Bãi biển </div>
+                                    <div class="infor-font">
+                                        <i class="infor-icon fa-solid fa-house">
+                                            <span>0M</span>
+                                        </i>   
+                                         <i class="infor-icon fa-solid fa-bed">
+                                            <span>0</span>
+                                         </i>
+                                         <i class="infor-icon fa-solid fa-bath">
+                                            <span>0</span>
+                                         </i>
+                                    </div>
+                                    <div class="infor-address">
+                                        <i class="fa-solid fa-location-dot"></i>
+                                        Quận - Phường - Thành Phố</div>
+                                    <a href="" class="apartment-detail">Xem chi tiết</a>
                                 </div>
                             </div>
                         </div>
@@ -143,8 +195,24 @@
                                 <div class="apartment-image">
                                     <img src="https://media-e1.s3.amazonaws.com/brt/styles/large/s3/snippets/snip_6.png" alt="">
                                 </div>
-                                <div class="information">
-                                    <div class="infor-item"></div>
+                                <div class="info">
+                                    <div class="infor-header">Tên khu nghỉ dưỡng</div>
+                                    <div class="infor-beach">Tên Bãi biển </div>
+                                    <div class="infor-font">
+                                        <i class="infor-icon fa-solid fa-house">
+                                            <span>0M</span>
+                                        </i>   
+                                         <i class="infor-icon fa-solid fa-bed">
+                                            <span>0</span>
+                                         </i>
+                                         <i class="infor-icon fa-solid fa-bath">
+                                            <span>0</span>
+                                         </i>
+                                    </div>
+                                    <div class="infor-address">
+                                        <i class="fa-solid fa-location-dot"></i>
+                                        Quận - Phường - Thành Phố</div>
+                                    <a href="" class="apartment-detail">Xem chi tiết</a>
                                 </div>
                             </div>
                         </div>
@@ -153,6 +221,7 @@
         </div>   
     </section>
     </div>
+    <%- include('../layouts/message')%>
     <%- include('../layouts/footer')%>
 </body>
 </html>
