--- a/views/components/profile.ejs
+++ b/views/components/profile.ejs
@@ -50,16 +50,19 @@
                                             <h3 class="infor-label">Email</h3>
                                             <div class="email infor-content"><%=userInfor[0].email%> </div>
                                         </li>
-                                        <li class="infor-item">
-                                            <h3 class="infor-label">Vai trò</h3>
-                                            <div class="role infor-content"><%=userInfor[0].role%> </div>
-                                        </li>
                                         
                                         <li class="infor-item">
                                             <h3 class="infor-label">Tên người dùng</h3>
                                             <div class="fullName infor-content"><%=userInfor[0].fullname%> </div>
                                         </li>
-                                        
+                                        <li class="infor-item">
+                                            <h3 class="infor-label">Giới tính</h3>
+                                            <div class="phoneNumber infor-content">Nam</div>
+                                        </li>
+                                        <li class="infor-item">
+                                            <h3 class="infor-label">Địa chỉ</h3>
+                                            <div class="phoneNumber infor-content"></div>
+                                        </li>
                                         <li class="infor-item">
                                             <h3 class="infor-label">Số điện thoại</h3>
                                             <div class="phoneNumber infor-content"><%=userInfor[0].phonenumber%> </div>
