--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -2,6 +2,19 @@
   rel="stylesheet"
   href="styles/footer.css"
 />
-<footer>
-    <h1>Đây là FOOTER</h1>
-</footer>
+<link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+<div class="footer">
+      <div class="contact">
+        <div class="p1">HOTLINE : 999xxxxxx</div>
+        <div class="p">EMAIL : xxxx@gmail.com</div>
+        <div class="p">ADDRESS : 254 NVL, Hai Chau ,Da Nang</div>
+      </div>
+      <div class="mxh">
+        <div class="p"><i class="bx bxl-facebook-square"></i>FACEBOOK</div>
+        <div class="p"><i class="bx bxl-twitter"></i>TWITTER</div>
+        <div class="p"><i class="bx bxl-telegram"></i>TELEGRAM</div>
+      </div>
+</div>
