--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -10,7 +10,7 @@
         <div class="site-navigation">
             <ul class="nav-header">
                 <li><a href="/">TRANG CHỦ</a></li>
-                <li><a href="/room/post">ĐĂNG TIN</a></li>
+                <li><a href="/post">ĐĂNG TIN</a></li>
                 <li><a href="/innkeeper/myRoom/all">QUẢN LÝ BÀI ĐĂNG</a></li>
                 <li><a href="/favoriteList/rooms">DANH SÁCH YÊU THÍCH</a></li>
                 <li><a href="/profile">THÔNG TIN CÁ NHÂN</a></li>                
