--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -3,7 +3,8 @@
     --black-color: #000;
     --text-color: #333;
     --primary-color: #33FAFA;
-
+    --search-color: rgba(45, 49, 54, 0.9);
+    --background-color: rgb(236, 236, 236);
 }
 
 * {
@@ -25,6 +26,36 @@ html {
 
 
 
+/* Modal */
+.modal {
+    position:fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display:flex;
+}
+
+.modal__overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal__body {
+    width: 40%;
+    height: 50%;
+    background-color: #fff;
+    margin: auto;
+    position: relative;
+    z-index: 1;
+    border-radius: 5px;
+}
+
+
+
+
 /* Grid */
 
 .grid {
@@ -34,7 +65,7 @@ html {
 }
 
 .grid.wide {
-    max-width: 1440px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
