--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -1,8 +1,100 @@
-footer {
+.footer {
     width: 100%;
-    height: 75px;
-    background-color: var(--primary-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    height: 120px;
+    background-color: black;
+    text-align: center;
+    box-shadow: 0 0 10px cyan;
+  }
+  .team {
+    width: 10%;
+    height: 150px;
+    float: left;
+  }
+  .team a {
+    width: 10%;
+    height: 150px;
+    text-align: center;
+    font-size: 30px;
+    float: left;
+    color: aqua;
+    text-decoration: none;
+    animation: neon2 1.5s ease-in-out infinite alternate;
+  }
+  
+  .contact {
+    width: 45%;
+    height: 150px;
+    text-align: left;
+    float: left;
+  }
+  .contact .p1 {
+    color: white;
+    font-size: 15px;
+    padding-top: 20px;
+    padding-left: 5px;
+  }
+  .contact .p {
+    color: white;
+    font-size: 15px;
+    padding-top: 10px;
+    padding-left: 5px;
+  }
+  .mxh {
+    width: 45%;
+    height: 150px;
+    float: left;
+    text-align: center;
+    display: inline-block;
+  }
+  .mxh .p1 {
+    color: white;
+    font-size: 15px;
+    padding-top: 20px;
+    padding-left: 15px;
+  }
+  .mxh .p {
+    color: white;
+    font-size: 15px;
+    padding-top: 10px;
+    padding-left: 5px;
+  }
+  
+  .bx {
+    font-size: 20px;
+    color: aqua;
+    padding-right: 5px;
+  }
+  
+  @keyframes neon1 {
+    from {
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff1177,
+        0 0 70px #ff1177, 0 0 80px #ff1177, 0 0 100px #ff1177, 0 0 150px #ff1177;
+    }
+    to {
+      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff1177,
+        0 0 35px #ff1177, 0 0 40px #ff1177, 0 0 50px #ff1177, 0 0 75px #ff1177;
+    }
+  }
+  
+  @keyframes neon2 {
+    from {
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #228dff,
+        0 0 70px #228dff, 0 0 80px #228dff, 0 0 100px #228dff, 0 0 150px #228dff;
+    }
+    to {
+      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #228dff,
+        0 0 35px #228dff, 0 0 40px #228dff, 0 0 50px #228dff, 0 0 75px #228dff;
+    }
+  }
+  
+  @keyframes neon3 {
+    from {
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ffdd1b,
+        0 0 70px #ffdd1b, 0 0 80px #ffdd1b, 0 0 100px #ffdd1b, 0 0 150px #ffdd1b;
+    }
+    to {
+      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ffdd1b,
+        0 0 35px #ffdd1b, 0 0 40px #ffdd1b, 0 0 50px #ffdd1b, 0 0 75px #ffdd1b;
+    }
+  }
+  
