--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -14,7 +14,7 @@ body {
     object-fit: cover;
     width: 100%;
     height: 90%;
-    z-index: 1;
+
 }
 .intro__group {
     padding-left: 5rem;
@@ -49,6 +49,43 @@ body {
 
 .regions {
 }
+
+
+.fa-magnifying-glass {
+    font-size: 16px;
+    padding-top: 6px;
+    margin-left: 15px;
+    margin-right: 5px;
+}
+
+.search-form__button > span {
+    line-height: 2px;
+}
+
+.search-form__button:hover {
+    cursor: pointer;
+}
+
+
+.search-form_bottom {
+    position: absolute;
+    right: 50%;
+    bottom: 50%;
+    top: 67%;
+    left: 38%;
+}
+
+.search-form__advanced {
+    width:  150px;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+}
+.search-form__advanced:hover {
+    cursor:pointer;
+    opacity: 0.8;
+}
+
 
 .space {
     margin-top:10rem;
@@ -118,4 +155,51 @@ body {
 }
 
 .info {
+    display:flex;
+    align-items: center;
+    flex-direction: column;
 }
+
+.infor-header,
+.infor-beach,
+.infor-font,
+.infor-address,
+.apartment-detail {
+    margin-top: 2rem;
+}
+.infor-header {
+    font-size: 3rem;
+}
+
+.infor-beach {
+    font-size: 2rem;
+}
+
+.infor-font {
+    font-size: 2rem;
+}
+
+.infor-font span {
+    font-weight: 400;
+    font-size: 1.3rem;
+    padding-left: 2px;
+}
+.infor-icon {
+    padding-right: 3rem;
+}
+
+.infor-address {
+    font-size: 1.5rem;
+}
+
+.apartment-detail {
+    display: block;
+  border: 1px solid var(--primary-color);
+  border-radius: 5px;
+  width: 60%;
+  padding: 10px 6px;
+  text-align: center;
+  font-weight: 700;
+    font-size: 2rem;
+}
+
