--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -1,278 +1,507 @@
-html, body {
-  font-family: 'Open Sans', sans-serif;
-  height: 100%;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
+:root {
+  --main-color: #2f32dd;
+  --color-dark: #1d2231;
+  --text-gray: #8390a2;
 }
-body {
-  background: #FFFFFF;
-  height: 100%;
-}
-img {
-  max-width: 100%;
-}
-ul {
-  list-style: none;
-  margin: 0;
+
+* {
   padding: 0;
+  margin: 0;
+  box-sizing: border-box !important;
+  list-style-type: none;
+  text-decoration: none !important;
+  font-family: "Poppins", sans-serif;
 }
-a {
-  text-decoration: none;
+
+.sidebar {
+  width: 280px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  z-index: 100;
+  background: var(--main-color);
+  transition: width 300ms;
+  cursor: pointer;
 }
-#header {
-  float: left;
+
+.sidebar-brand {
+  height: 90px;
+  padding: 1rem 0rem 1rem 2rem;
+  color: #fff;
+}
+
+.sidebar-brand span {
+  display: inline-block;
+  padding-right: 1rem;
+}
+
+.sidebar-menu {
+  margin-top: 1rem;
+}
+
+.sidebar-menu li {
   width: 100%;
-  background: #ffffff;
-  position: relative;
+  margin-bottom: 1.7rem;
+  font-size: 1rem;
 }
-.white-label {
-  float: left;
-  background: #33373B;
-  max-width: 210px;
-  padding: 10px;
-  min-height: 44px;
-  background: #279BE4;
-  width: 100%;
-  max-height: 44px;
-}
-.white-label img {
-  max-height: 43px;
-}
-.header-nav {
-  min-height: 64px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  background: #279BE4;
-}
-.menu-button {
-  float: left;
-  font-size: 29px;
+
+.sidebar-menu a {
+  padding-left: 1rem;
+  display: block;
   color: #fff;
-  padding: 12px 19px;
+  font-size: 1rem;
 }
-.nav ul {
-  height: 64px;
-  float: right;
+
+.sidebar-menu a.active {
+  background: #fff;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  color: var(--main-color);
+  border-radius: 30px 0px 0px 30px;
+  font-weight: bold;
 }
-.nav ul li {
-  float: left;
-  position: relative;
-  padding: 11px;
+
+.sidebar-menu a span {
+  font-size: 1.1rem;
+  padding-right: 1rem;
 }
-.nav > ul > li:first-child {
-  border-left: none;
+
+#nav-toggle:checked + .sidebar {
+  width: 70px;
 }
-.nav ul li a {
-  color: #fff;
-  padding: 1px;
-  float: left;
-}
-.nav ul li i {
-  color: #fff;
-}
-.nav ul li:hover {
-  background: #01A9F0;
-  color: #fff;
-}
-.user-profile {
-  float: right;
-}
-.user-profile > div {
-  float: left;
-  padding: 20px 8px;
-  position: relative;
-}
-.user-profile i {
-  font-size: 1.2em;
-  color: #5F6F86;
-}
-.user-profile i:hover {
-  color: #397AC5;
-}
-.font-icon i:after {
-  position: absolute;
-  content: '3';
-  background: #E74C3C;
-  color: #fff;
-  font-size: 12px;
-  border-radius: 50%;
-  width: 10px;
-  height: 10px;
-  padding: 3px 4px 4px 3px;
+
+#nav-toggle:checked + .sidebar .sidebar-brand,
+#nav-toggle:checked + .sidebar li {
+  padding-left: 1rem;
   text-align: center;
-  top: 12px;
-  right: 11px;
 }
-.font-icon {
-  padding: 8px 10px;
+
+#nav-toggle:checked + .sidebar li a {
+  padding-left: 0rem;
 }
-.font-icon i {
-  font-size: 24px;
-}
-.nav-mail .font-icon i:after {
-  background: #2ECC71;
-}
-div.user-image {
-  padding: 9px 5px;
-  margin: 0 5px;
-  border-left: 1px solid #ccc;
-  border-right: 1px solid #ccc;
-}
-.nav-profile {
-  background: #0274BD;
-}
-.nav-profile-image img {
-  width: 39px;
-  height: 41px;
-  border-radius: 50%;
-  float: left;
-}
-.nav-profile-name {
-  float: right;
-  margin: 11px 7px 8px 14px;
-  color: #fff;
-}
-.nav-profile-name i {
-  padding: 0 0 0 11px;
-}
-.nav-chat i:after {
+
+#nav-toggle:checked + .sidebar .sidebar-brand h3 span:last-child,
+#nav-toggle:checked + .sidebar li a span:last-child {
   display: none;
 }
-#sidebar {
-  overflow: hidden;
-  width: 210px;
+
+#nav-toggle:checked + .sidebar .sidebar-menu ul {
+  padding-left: 0rem;
+}
+
+#nav-toggle:checked + .sidebar .sidebar-menu a span {
+  font-size: 1.7rem;
+  font-weight: bold;
+}
+
+#nav-toggle:checked ~ .main-content {
+  margin-left: 70px;
+}
+
+#nav-toggle:checked ~ .main-content .main-header {
+  left: 70px;
+  width: calc(100% - 70px);
+}
+
+.main-content {
+  transition: margin-left 300ms;
+  margin-left: 280px;
+}
+
+.main-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 1.5rem;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  left: 280px;
+  width: calc(100% - 280px);
+  background: #fff;
+  transition: left 300ms;
+  cursor: pointer;
+}
+
+#nav-toggle {
+  display: none;
+}
+
+.main-header h3 {
+  color: #222;
+  margin-top: 4px;
+}
+
+.main-header label span {
+  font-size: 1.7rem;
+  padding-right: 1rem;
+  cursor: pointer;
+}
+
+.search-wrapper {
+  border: 1px solid #ccc;
+  border-radius: 30px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  overflow-x: hidden;
+}
+
+.search-wrapper span {
+  display: inline-block;
+  padding: 0rem 1rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.search-wrapper input {
   height: 100%;
-  float: left;
-  background: #2A2D33;
+  padding: 0.5rem;
+  border: none;
+  outline: none;
 }
-#sidebar-nav {
-  width: 106%;
-  height: calc(100% - 95px);
-  padding: 0;
-  background: #2A2D33;
-  border-right: 1px solid #E0E0E0;
-  overflow-y: scroll;
-}
-#sidebar-nav h2 {
-  color: #60636B;
-  float: left;
-  width: 100%;
-  font-size: .8em;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 600;
-  text-transform: uppercase;
-  padding: 3px 0 2px 20px;
-  border-top: 1px solid #4D4C4C;
-  box-sizing: border-box;
-  margin: 10px 0;
-}
-#sidebar-nav ul {
 
+.user-wrapper {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
-#sidebar-nav ul li {
 
+.user-wrapper img {
+  border-radius: 50%;
+  margin-right: 1rem;
 }
-#sidebar-nav ul li a {
-  color: #C2C2C2;
-  font-size: .95em;
-  padding: 15px 20px;
-  float: left;
-  width: 100%;
-  font-weight: 600;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+
+.user-wrapper h4 {
+  margin-bottom: 0rem !important;
 }
-#sidebar-nav ul li:hover a, #sidebar-nav ul li:hover a i, #sidebar-nav li.active a, #sidebar-nav li.active a i {
-  color: #333;
+
+.user-wrapper small {
+  display: inline-block;
+  color: var(--text-gray);
 }
-#sidebar-nav ul li:hover a {
+
+main {
+  margin-top: 85px;
+  padding: 2rem 1.5rem;
+  background-color: #f1f5f9;
+  min-height: calc(100vh - 90px);
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2rem;
+  margin-top: 1rem;
+}
+
+.card-single {
+  display: flex;
+  justify-content: space-between;
   background: #fff;
-  color: #333;
+  padding: 2rem;
+  border-radius: 5px;
+  cursor: pointer;
 }
-#sidebar-nav ul li.active a {
+
+.card-single div:last-child span {
+  font-size: 3rem;
+  color: var(--main-color);
+}
+
+.card-single div:first-child span {
+  color: var(--text-gray);
+}
+
+.card-single:last-child {
+  background: var(--main-color);
+}
+.card-single:last-child h1,
+.card-single:last-child div:first-child span,
+.card-single:last-child div:last-child span {
+  color: #fff;
+}
+
+.recent-grid {
+  margin-top: 3.5rem;
+  display: grid;
+  grid-gap: 2rem;
+  grid-template-columns: 67% auto;
+}
+
+.card {
   background: #fff;
-  color: #333;
+  border-radius: 5px;
 }
-#sidebar-nav ul li.active a i {
-  background: #fff;
+
+.card-header,
+.card-body {
+  padding: 1rem;
 }
-#sidebar-nav i {
-  padding-right: 8px;
-  font-size: 1.3em;
-  color: #60636B;
-  width: 25px;
+
+.card-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #f0f0f0;
+  cursor: pointer;
+}
+
+.card-header button {
+  background: var(--main-color);
+  border-radius: 15px;
+  color: #fff;
+  font-size: 0.8rem;
+  padding: 0.5rem 1rem;
+  border: 1px solid var(--main-color);
+}
+
+table {
+  border-collapse: collapse;
+}
+
+thead tr {
+  border-top: 1px solid #f0f0f0;
+  border-bottom: 1px solid #f0f0f0;
+}
+
+thead td {
+  font-weight: 700;
+}
+
+td {
+  padding: 0.5rem 1rem;
+  font-size: 0.9rem;
+  color: #222;
   text-align: center;
 }
-#content {
-  float: left;
-  width: calc(100% - 210px);
-  height: 100%;
-  word-wrap: break-word;
-  background: #FFFFFF;
-  font-family: Raleway, sans-serif;
+
+.student {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
 }
-::-webkit-scrollbar {
-    width: 12px;
+
+.info {
+  display: flex;
+  align-items: center;
 }
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    border-radius: 10px;
+
+.info img {
+  border-radius: 50%;
+  margin-right: 1rem;
+  cursor: pointer;
 }
-::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+
+.info h4 {
+  font-size: 0.9rem;
+  font-weight: 700;
+  color: #222;
 }
-.content {
-  float: left;
-  background: #E9EEF4;
-  width: 100%;
-  height: calc(100% - 64px);
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+
+.info small {
+  font-weight: 600;
+  color: var(--text-gray);
 }
-.content-header {
-  background: #fff;
-  float: left;
-  width: 100%;
-  margin-bottom: 15px;
-  padding: 15px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  border-bottom: 1px solid #ccc;
-}
-.content-header h1 {
-  margin: 0;
-  font-weight: normal;
-  padding-bottom: 5px;
-}
-.content-header p {
-  margin: 0;
-  padding-left: 2px;
-}
-.widget-box {
-  background: #fff;
-  border: 1px solid #E0E0E0;
-  float: left;
-  width: 100%;
-  margin: 0 0 15px 15px;
-}
-.widget-header {
-  background: #279BE4;
-}
-.widget-header h2 {
-  font-size: 15px;
-  font-weight: normal;
-  margin: 0;
-  padding: 11px 15px;
-  color: #F9F9F9;
+
+.contact span {
+  font-size: 1.4rem;
   display: inline-block;
+  margin-left: 0.5rem;
+  color: var(--main-color);
+  cursor: pointer;
 }
-.sample-widget {max-width: 47%;}
-.widget-box .fa-cog {
-  float: right;
-  color: #fff;
-  margin: 11px 11px 0 0;
-  font-size: 20px;
+
+@media only screen and (max-width: 1200px) {
+  .sidebar {
+    width: 70px;
+  }
+
+  .sidebar .sidebar-brand,
+  .sidebar li {
+    padding-left: 1rem;
+    text-align: center;
+  }
+
+  .sidebar li a {
+    padding-left: 0rem;
+  }
+
+  .sidebar .sidebar-brand h3 span:last-child,
+  .sidebar li a span:last-child {
+    display: none;
+  }
+
+  .sidebar .sidebar-menu ul {
+    padding-left: 0rem;
+  }
+
+  .sidebar .sidebar-menu a span {
+    font-size: 1.7rem;
+    font-weight: bold;
+  }
+
+  .main-content {
+    margin-left: 70px;
+  }
+
+  .main-content .main-header {
+    left: 70px;
+    width: calc(100% - 70px);
+  }
+}
+
+@media only screen and (max-width: 960px) {
+  .cards {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .recent-grid {
+    grid-template-columns: 60% 40%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .recent-grid {
+    grid-template-columns: 100%;
+  }
+
+  .search-wrapper {
+    display: none;
+  }
+
+  .sidebar {
+    left: -100% !important;
+  }
+
+  .user-wrapper h4 {
+    font-size: 1rem;
+  }
+
+  .main-header h3 {
+    display: flex;
+    align-items: center;
+  }
+
+  .main-header h3 label {
+    display: inline-block;
+    align-items: center;
+    background: var(--main-color);
+    padding-right: 0rem;
+    margin-right: 1rem;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center !important;
+  }
+
+  .main-header h3 {
+    font-size: 1rem;
+  }
+
+  .main-header h3 span {
+    text-align: center;
+    padding-right: 0rem;
+  }
+
+  .main-content {
+    width: 100%;
+    margin-left: 0rem;
+  }
+
+  .main-header {
+    width: 100% !important;
+    left: 0 !important;
+  }
+
+  #nav-toggle:checked + .sidebar {
+    left: 0 !important;
+    z-index: 100;
+    width: 280px;
+  }
+
+  #nav-toggle:checked + .sidebar .sidebar-brand,
+  #nav-toggle:checked + .sidebar li {
+    padding-left: 1rem;
+    text-align: left;
+  }
+
+  #nav-toggle:checked + .sidebar li a {
+    padding-left: 1rem;
+  }
+
+  #nav-toggle:checked + .sidebar.sidebar-brand h3 span:last-child,
+  #nav-toggle:checked + .sidebar li a span:last-child {
+    display: inline;
+    font-size: 16px;
+  }
+
+  #nav-toggle:checked + .sidebar .sidebar-menu ul {
+    padding-left: 0rem;
+  }
+
+  #nav-toggle:checked + .sidebar .sidebar-menu a span {
+    font-size: 1.7rem;
+    font-weight: bold;
+  }
+
+  #nav-toggle:checked ~ .main-content {
+    margin-left: 0rem !important;
+  }
+}
+
+@media only screen and (max-width: 560px) {
+  .cards {
+    grid-template-columns: 100%;
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  .cards {
+    grid-template-columns: 100%;
+  }
+
+  .user-wrapper img {
+    margin-top: -6px;
+    margin-right: -4px;
+  }
+
+  .user-wrapper h4 {
+    display: none;
+  }
+
+  .user-wrapper small {
+    display: none;
+  }
+
+  .main-header h3 {
+    font-weight: bold;
+  }
+} ;
+
+.room-item {
+  width: 500px;
+  min-height: 700px;
+  padding: 16px;
+  margin-bottom: 10px;
+  border: 4px solid black !important;
+}
+.image-room {
+  width: 100%;
+  height: 400px;
+}
+.image-room img {
+  width: 100%;
+  height: 100%;
 }
