--- a/views/components/index.ejs
+++ b/views/components/index.ejs
@@ -73,15 +73,15 @@
                 </div>
                 <div class="list-apartment">
                     <div class="row">
-
+                        <%for(let i = 0; i < listRegion2.length; i++) {%>
                         <div class="col l-3">
                             <div class="apartment-item">
                                 <div class="apartment-image">
-                                    <img src="https://media-e1.s3.amazonaws.com/brt/styles/large/s3/snippets/snip_6.png" alt="">
+                                    <img src="<%=listRegion2[i].images[0].url%>" alt="">
                                 </div>
                                 <div class="info">
-                                    <div class="infor-header">Tên khu nghỉ dưỡng</div>
-                                    <div class="infor-beach">Tên Bãi biển </div>
+                                    <div class="infor-header"><%=listRegion2[i].heading%></div>
+                                    <div class="infor-beach"><%=listRegion1[i].city%></div>
                                     <div class="infor-font">
                                         <i class="infor-icon fa-solid fa-house">
                                             <span>0M</span>
@@ -126,6 +126,7 @@
                                 </div>
                             </div>
                         </div>
+                        <% } %>
                     </div>
                 </div>
             </div>
